--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/index.ts",
-    "build": "tsc",
+    "build": "npx tsc",
     "serve": "node dist/index.js"
   },
   "keywords": [],
