--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@types/otp-generator": "^4.0.2",
     "@types/uuid": "^10.0.0",
     "prisma": "^5.15.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "ts-node": "^10.9.2"
   }
 }
